fix sidebar showing on small viewport

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -218,11 +218,14 @@ a
 
 
 @media (max-width: 736px) 
+  body
+    overflow: hidden
   .container
     position: relative
   .navbar-end 
     position: absolute
     width: 100%
+    height: 100vh
     top: 70px
     transform: translateX(100%)
     padding: 0
